Bug 465655 - loopback interface shown with virtual interfaces disabled
Summary: loopback interface shown with virtual interfaces disabled
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 465597 465856 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-02-13 07:57 UTC by gudvinr+kde
Modified: 2024-12-23 18:26 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gudvinr+kde 2023-02-13 07:57:21 UTC
SUMMARY

In both editor and applet I see "lo" interface which is link/loopback with address 127.0.0.1/8 and I have "show virtual connections" checkbox disabled.
And I never even enabled it, actually.

STEPS TO REPRODUCE
1.  Open connection list

OBSERVED RESULT
I see loopback interface and can interact with it

EXPECTED RESULT
No loopback interface is shown

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 6.1.11-zen1-1-zen (64-bit)
Network Manager Version: 1.42.0
Graphics Platform: Wayland
Comment 1 spittingverse@gmail.com 2023-02-14 01:56:09 UTC
I am experiencing the same thing.

Operating System: Arch Linux
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8
Kernel Version: 6.1.11-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6650 XT
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: B550M DS3H AC
System Version: -CF

Network Manager Version: 1.42.0-1
Comment 2 Bug Janitor Service 2023-02-15 15:36:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/217
Comment 3 Patrick Silva 2023-02-15 16:02:57 UTC
*** Bug 465597 has been marked as a duplicate of this bug. ***
Comment 4 Nicolas Fella 2023-02-16 17:42:17 UTC
*** Bug 465856 has been marked as a duplicate of this bug. ***
Comment 5 Nicolas Fella 2023-02-16 17:43:42 UTC
FTR this behavior was introduced by the NetworkManager 1.42 release
Comment 6 ratijas 2023-02-17 10:46:06 UTC
Git commit 57bbd8a07ec7a37071eede01ef399ab2f8fc24f1 by ivan tkachenko, on behalf of David Redondo.
Committed on 16/02/2023 at 15:46.
Pushed by davidre into branch 'master'.

Filter out the loopback device

Quick fix so we can backport it.
FIXED-IN:5.27.1

M  +2    -1    libs/declarative/networkstatus.cpp
M  +5    -0    libs/models/networkmodel.cpp

https://invent.kde.org/plasma/plasma-nm/commit/57bbd8a07ec7a37071eede01ef399ab2f8fc24f1
Comment 7 David Redondo 2023-02-17 10:59:52 UTC
Git commit f8a864ebbb36866a3c25ca58ba5059b4a5272b5a by David Redondo.
Committed on 17/02/2023 at 10:59.
Pushed by davidre into branch 'cherry-pick-57bbd8a0'.

Filter out the loopback device

Quick fix so we can backport it.
FIXED-IN:5.27.1


(cherry picked from commit 57bbd8a07ec7a37071eede01ef399ab2f8fc24f1)

M  +2    -1    libs/declarative/networkstatus.cpp
M  +5    -0    libs/models/networkmodel.cpp

https://invent.kde.org/plasma/plasma-nm/commit/f8a864ebbb36866a3c25ca58ba5059b4a5272b5a
Comment 8 LuneLovehearn 2023-02-23 04:05:15 UTC Comment hidden (spam)
Comment 9 LuneLovehearn 2023-02-23 04:06:06 UTC Comment hidden (spam)
Comment 10 LuneLovehearn 2023-02-23 04:10:19 UTC Comment hidden (spam)
Comment 11 Frank Kruger 2023-02-23 07:23:07 UTC
Thanks for the speedy fix, the loopback interface does not show up in the applet anymore. However, it is still listed in the system settings. I this on purpose?
Comment 12 Nate Graham 2023-02-23 13:55:53 UTC
Not sure. Please submit a new bug report for it if you think it's an issue. Thanks!
Comment 13 LuneLovehearn 2023-02-23 14:36:58 UTC
(In reply to Nate Graham from comment #12)
> Not sure. Please submit a new bug report for it if you think it's an issue.
> Thanks!

I don't think so. yet the loop device could or should be listed on it's own category, separeted from the real ethernet devices, and also add a good description to it so users don't get confused about what it is and what it does. I even tried to delete or disconnect it, because there was zero information about it on the plasma settings. had to use archwiki to figure out what it was. as for now, thanks for the quick fix.
Comment 14 Ben Cooksley 2024-12-23 18:26:01 UTC
Bulk transfer as requested in T17796