Filter out the loopback device

Quick fix so we can backport it.
BUG:465655
FIXED-IN:5.27.1


(cherry picked from commit 57bbd8a07ec7a37071eede01ef399ab2f8fc24f1)