libs/models/networkmodel.cpp
@@ -14,6 +14,7 @@
 
 #include <ModemManagerQt/Manager>
 
+#include <NetworkManagerQt/GenericDevice>
 #include <NetworkManagerQt/Settings>
 
 NetworkModel::NetworkModel(QObject *parent)
@@ -211,6 +212,10 @@ void NetworkModel::initialize()
     // Initialize existing devices
     for (const NetworkManager::Device::Ptr &dev : NetworkManager::networkInterfaces()) {
         if (!dev->managed()) {
+            continue;
+        }
+        // TODO implement loopback device in NetowrkManagerQt
+        if (dev->interfaceName() == QLatin1String("lo")) {
             continue;
         }
         addDevice(dev);
